[gd_scene load_steps=2 format=3 uid="uid://14oke6hrma4i"]

[ext_resource type="Script" path="res://src/ui/menus/game_over.gd" id="1_psqvr"]

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_psqvr")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.396078)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="BoxContainer" type="BoxContainer" parent="Control"]
layout_mode = 0
offset_left = -142.0
offset_top = -100.0
offset_right = 142.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Control/BoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 102
text = "Oops!"

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = -480.0
offset_top = 100.0
offset_right = 508.0
offset_bottom = 177.0
theme_override_constants/separation = 15

[node name="ResetButton" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = " Restart Level "

[node name="ReviveButton" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = " Revive (Ad) "

[node name="MainMenuButton" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = " Main Menu "

[connection signal="pressed" from="Control/HBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/ReviveButton" to="." method="_on_revive_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
